#405: Code clean-up in BaseGetResultsFacet & BaseGetResultsFacets UCs